Add java 21